--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ charset-normalizer==3.4.1
 click==8.1.8
 colorama==0.4.6
 Flask==2.2.5
-gunicorn==23.0.0  # Latest stable as of now—Adjust if needed
+gunicorn==23.0.0
 idna==3.10
 importlib-metadata==6.7.0
 itsdangerous==2.1.2
@@ -14,3 +14,5 @@ typing_extensions==4.7.1
 urllib3==2.0.7
 Werkzeug==2.2.3
 zipp==3.15.0
+pandas==2.2.2
+openpyxl==3.1.2
