--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,8 @@
-certifi==2025.1.31
-charset-normalizer==3.4.1
-click==8.1.8
-colorama==0.4.6
-Flask==2.2.5
-gunicorn==23.0.0
-idna==3.10
-importlib-metadata==6.7.0
-itsdangerous==2.1.2
-Jinja2==3.1.6
-MarkupSafe==2.1.5
-requests==2.31.0
-typing_extensions==4.7.1
-urllib3==2.0.7
-Werkzeug==2.2.3
-zipp==3.15.0
-pandas==2.2.2
-openpyxl==3.1.2
+flask==2.3.3
+flask-sqlalchemy==3.1.1
+pymysql==1.1.1
+flask-caching==2.1.0
+redis==5.0.8
+tenacity==8.5.0
+requests==2.32.3
+gunicorn==22.0.0
