--- a/rfid_dash_dev.service
+++ b/rfid_dash_dev.service
@@ -8,6 +8,9 @@ Group=www-data
 WorkingDirectory=/home/tim/test_rfidpi
 Environment="PATH=/home/tim/test_rfidpi/venv/bin"
 ExecStart=/home/tim/test_rfidpi/venv/bin/gunicorn --workers 1 --bind 0.0.0.0:3607 -c gunicorn.conf.py run:app
+Restart=always
+KillMode=process
+TimeoutStopSec=10
 
 [Install]
 WantedBy=multi-user.target
