--- a/rfid_dash_dev.service
+++ b/rfid_dash_dev.service
@@ -8,10 +8,10 @@ Group=www-data
 WorkingDirectory=/home/tim/test_rfidpi
 Environment="PATH=/home/tim/test_rfidpi/venv/bin"
 ExecStart=/home/tim/test_rfidpi/venv/bin/gunicorn --workers 1 --bind 0.0.0.0:3607 -c gunicorn.conf.py run:app
-ExecStop=/bin/kill -s TERM $MAINPID
+ExecStop=/bin/kill -s KILL $MAINPID
 Restart=always
-KillMode=process
-TimeoutStopSec=15
+KillMode=mixed
+TimeoutStopSec=20
 
 [Install]
 WantedBy=multi-user.target
