--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+mysql-connector-python==8.0.27
 flask==2.3.3
 flask-sqlalchemy==3.1.1
 pymysql==1.1.1
@@ -8,3 +9,4 @@ requests==2.32.3
 gunicorn==22.0.0
 apscheduler==3.10.4
 tenacity==8.5
+Flask-Redis==0.4.0
