--- a/rfid_dash_dev.service
+++ b/rfid_dash_dev.service
@@ -6,8 +6,7 @@ After=network.target mariadb.service
 User=tim
 Group=www-data
 WorkingDirectory=/home/tim/test_rfidpi
-Environment="PATH=/home/tim/test_rfidpi/venv/bin"
-ExecStartPre=/bin/sh -c "while ! mysqladmin ping -h127.0.0.1 --silent; do sleep 1; done"  # Wait for MySQL
+Environment="PATH=/home/tim/test_rfidpi/venv/bin:/usr/bin"  # Include /usr/bin for mysqladmin if installed
 ExecStart=/home/tim/test_rfidpi/venv/bin/gunicorn --workers 2 --threads 2 --timeout 600 --bind 127.0.0.1:3608 --error-logfile /home/tim/test_rfidpi/logs/gunicorn_error.log --access-logfile /home/tim/test_rfidpi/logs/gunicorn_access.log run:app
 ExecStop=/bin/kill -s KILL $MAINPID
 Restart=always
