--- a/rfid_dash_dev.conf
+++ b/rfid_dash_dev.conf
@@ -1,12 +1,17 @@
+server {
+listen 3608;
+server_name 192.168.3.112;
+
 location / {
-    proxy_pass http://127.0.0.1:3607;
-    proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto $scheme;
+proxy_pass http://127.0.0.1:3607;
+proxy_set_header Host $host;
+proxy_set_header X-Real-IP $remote_addr;
+proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+proxy_set_header X-Forwarded-Proto $scheme;
 }
 
 location /static {
-    alias /home/tim/test_rfidpi/static;
-    expires 1d;
+alias /home/tim/test_rfidpi/static;
+expires 1d;
+}
 }
