Fix Nginx config, port 3607 conflict, static file 404s; restore home.html v3 recent scans; update config.py v8 for IP management, rfid_dash_dev.service v6, base.html v7

--- a/rfid_dash_dev.conf
+++ b/rfid_dash_dev.conf
@@ -1,6 +1,6 @@
 server {
 listen 3608;
-server_name 192.168.3.112;
+server_name ${APP_IP:-192.168.3.112};
 
 location / {
 proxy_pass http://127.0.0.1:3607;
