--- a/rfid_dash_dev.conf
+++ b/rfid_dash_dev.conf
@@ -1,9 +1,9 @@
 server {
-listen 3608;
+listen 8101;
 server_name ${APP_IP:-192.168.3.112};
 
 location / {
-proxy_pass http://127.0.0.1:3607;
+proxy_pass http://127.0.0.1:8101;
 proxy_set_header Host $host;
 proxy_set_header X-Real-IP $remote_addr;
 proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -11,7 +11,8 @@ proxy_set_header X-Forwarded-Proto $scheme;
 }
 
 location /static {
-alias /home/tim/test_rfidpi/static;
+alias /home/tim/RFID3/static;
 expires 1d;
 }
 }
+
