--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,8 +1,7 @@
 # .github/workflows/deploy.yml
 # Version: 2025-08-06-v2
-# Description: Deploys RFID Dashboard updates to Raspberry Pi on push to main branch
-# Created: 2025-08-06
-# Author: Grok 3 (assisted by xAI)
+# Deploys RFID3 to Raspberry Pi on main branch updates, preserving database and local configs
+# Uses Tailscale for secure SSH access and update_from_github.sh for deployment
 
 name: Deploy to Pi
 
@@ -15,35 +14,39 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
+      - name: Checkout Repository
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0  # Fetch full history for git operations
+          fetch-depth: 1  # Shallow clone for faster checkout
 
-      - name: Set up SSH key
-        run: |
-          # Create SSH directory and store deploy key
-          mkdir -p ~/.ssh
-          echo "${{ secrets.PI_DEPLOY_KEY }}" > ~/.ssh/github_deploy_key
-          chmod 600 ~/.ssh/github_deploy_key
-          # Add Pi host to known_hosts
-          ssh-keyscan -H ${{ secrets.PI_HOST }} >> ~/.ssh/known_hosts || echo "ssh-keyscan failed, continuing..."
+      - name: Set up Tailscale
+        uses: tailscale/github-action@v2
+        with:
+          authkey: ${{ secrets.TAILSCALE_AUTHKEY }}
+          hostname: github-action-deploy
 
-      - name: Test SSH connection
+      - name: Deploy to Pi via SSH
         run: |
-          ssh -i ~/.ssh/github Snowden: 1
-          ssh -i ~/.ssh/github_deploy_key -o StrictHostKeyChecking=no ${{ secrets.PI_USER }}@${{ secrets.PI_HOST }} 'hostname'
-
-      - name: Deploy to Pi
-        run: |
-          ssh -i ~/.ssh/github_deploy_key -o StrictHostKeyChecking=no ${{ secrets.PI_USER }}@${{ secrets.PI_HOST }} << 'EOF'
+          ssh -o StrictHostKeyChecking=no tim@${{ secrets.PI_TAILSCALE_IP }} << 'EOF'
             set -e
+            echo "Starting deployment to Pi"
             cd /home/tim/RFID3
-            # Stash local changes, excluding database and config files
-            git stash push --include-untracked -- . ':!*.sql' ':!*.db' ':!config.py' ':!logs/*'
-            /usr/bin/git fetch origin
-            /usr/bin/git reset --hard origin/main
-            source venv/bin/activate
-            pip install -r requirements.txt
+            # Stash any local changes to avoid conflicts
+            git stash push -m "Auto-stash before deploy $(date)"
+            # Pull latest changes from main
+            git fetch origin
+            git checkout main
+            git pull origin main
+            # Run update script without database operations
+            ./update_from_github.sh --no-db
+            # Restart service
             sudo systemctl restart rfid_dash_dev.service
+            echo "Deployment completed"
+          EOF
+
+      - name: Verify Deployment
+        run: |
+          ssh -o StrictHostKeyChecking=no tim@${{ secrets.PI_TAILSCALE_IP }} << 'EOF'
+            systemctl is-active rfid_dash_dev.service && echo "Service is running" || echo "Service failed to start"
+            git -C /home/tim/RFID3 log -1 --pretty=%H  # Log latest commit hash
           EOF
