--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,6 +1,6 @@
 # .github/workflows/deploy.yml
-# Version: 2025-08-06-v8
-# Description: Deploys RFID Dashboard updates to Raspberry Pi via SSH on push to main branch
+# Version: 2025-08-06-v12
+# Description: Deploys RFID Dashboard updates to Raspberry Pi via SSH on self-hosted runner
 # Created: 2025-08-06
 # Author: Grok 3 (assisted by xAI)
 
@@ -13,23 +13,29 @@ on:
 
 jobs:
   deploy:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
           fetch-depth: 0  # Fetch full history for git operations
 
+      - name: Debug secrets
+        run: |
+          echo "PI_USER: ${{ secrets.PI_USER }}"
+          echo "PI_HOST: ${{ secrets.PI_HOST }}"
+          echo "PI_DEPLOY_KEY exists: $(if [ -n '${{ secrets.PI_DEPLOY_KEY }}' ]; then echo 'yes'; else echo 'no'; fi)"
+
       - name: Set up SSH key
         run: |
-          # Create SSH directory and store deploy key
+          set -x
           mkdir -p ~/.ssh
           echo "${{ secrets.PI_DEPLOY_KEY }}" > ~/.ssh/github_deploy_key
           chmod 600 ~/.ssh/github_deploy_key
-          # Add Pi host to known_hosts
-          ssh-keyscan -H ${{ secrets.PI_HOST }} >> ~/.ssh/known_hosts || echo "ssh-keyscan failed, continuing..."
+          ls -l ~/.ssh
+          ssh-keyscan ${{ secrets.PI_HOST }} >> ~/.ssh/known_hosts || echo "ssh-keyscan failed"
 
-      - name: Test SSH connection
+      - name: Test SSH to Pi
         run: |
           ssh -i ~/.ssh/github_deploy_key -o StrictHostKeyChecking=no ${{ secrets.PI_USER }}@${{ secrets.PI_HOST }} 'hostname'
 
@@ -38,10 +44,9 @@ jobs:
           ssh -i ~/.ssh/github_deploy_key -o StrictHostKeyChecking=no ${{ secrets.PI_USER }}@${{ secrets.PI_HOST }} << 'EOF'
             set -e
             cd /home/tim/RFID3
-            # Stash local changes, excluding database and config files
             git stash push --include-untracked -- . ':!*.sql' ':!*.db' ':!config.py' ':!logs/*'
-            /usr/bin/git fetch origin
-            /usr/bin/git reset --hard origin/main
+            git fetch origin
+            git reset --hard origin/main
             source venv/bin/activate
             pip install -r requirements.txt
             sudo systemctl restart rfid_dash_dev.service
