--- a/rfid_dash_dev.conf
+++ b/rfid_dash_dev.conf
@@ -2,17 +2,19 @@ server {
 listen 8101;
 server_name ${APP_IP:-192.168.3.110};
 
-location / {
-    proxy_pass http://127.0.0.1:8102;
-proxy_set_header Host $host;
-proxy_set_header X-Real-IP $remote_addr;
-proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-proxy_set_header X-Forwarded-Proto $scheme;
-}
+    set $project_dir /opt/RFID3;
 
-location /static {
-alias /home/tim/RFID3/static;
-expires 1d;
-}
+    location / {
+        proxy_pass http://127.0.0.1:8102;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    location /static {
+        alias $project_dir/static;
+        expires 1d;
+    }
 }
 
