--- a/rfid_dash_dev.service
+++ b/rfid_dash_dev.service
@@ -5,10 +5,11 @@ After=network.target mariadb.service
 [Service]
 User=tim
 Group=www-data
-WorkingDirectory=/home/tim/RFID3
-Environment="PATH=/home/tim/RFID3/venv/bin:/usr/bin"
+Environment=PROJECT_DIR=/opt/RFID3
+WorkingDirectory=${PROJECT_DIR}
+Environment="PATH=${PROJECT_DIR}/venv/bin:/usr/bin"
 Environment="APP_IP=192.168.3.110"
-ExecStart=/home/tim/RFID3/venv/bin/gunicorn --workers 1 --threads 4 --timeout 600 --bind 0.0.0.0:8102 --error-logfile /home/tim/RFID3/logs/gunicorn_error.log --access-logfile /home/tim/RFID3/logs/gunicorn_access.log run:app
+ExecStart=${PROJECT_DIR}/venv/bin/gunicorn --workers 1 --threads 4 --timeout 600 --bind 0.0.0.0:8102 --error-logfile ${PROJECT_DIR}/logs/gunicorn_error.log --access-logfile ${PROJECT_DIR}/logs/gunicorn_access.log run:app
 ExecStop=/bin/kill -s KILL $MAINPID
 Restart=always
 KillMode=mixed
